--- a/src/components/Day/Day.css
+++ b/src/components/Day/Day.css
@@ -1,7 +1,7 @@
 .day {
     width: 100%;
     height:  100%;
-    border: 1px solid black;
+    border: 0.06rem solid black;
     cursor: pointer;
 }
 
