--- a/src/components/Hour/Hour.css
+++ b/src/components/Hour/Hour.css
@@ -1,8 +1,12 @@
 .Hour {
     display: flex;
-    width: 300px;
-    gap: 30px;
+    width: 15.5rem;
+    gap: 1.8rem;
     cursor: pointer;
+}
+
+.Hour:hover {
+    background-color: #929292;
 }
 
 .Hour-content {
@@ -11,6 +15,6 @@
 
 .Hour-task {
     width: 100%;
-    height: 20px;
+    height: 1.2rem;
     border-bottom: 1px solid black;
 }
