--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -1,13 +1,14 @@
 .Tasks {
-    width: 600px;
+    width: 33rem;
 
 }
 
 .Tasks-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
-    height: 650px;
+    height: 34.5rem;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 0.6rem;
 }
