--- a/src/components/Hour/Hour.css
+++ b/src/components/Hour/Hour.css
@@ -15,6 +15,12 @@
 
 .Hour-task {
     width: 100%;
-    height: 1.2rem;
+    height: 1.3rem;
     border-bottom: 1px solid black;
+    font-family: BadScript;
+    color: rgb(3, 3, 255);
+    font-size: 0.9rem;
+    font-weight: 900;
+    display: flex;
+    align-items: center
 }
