--- a/src/components/DayOfWeek/DayOfWeek.css
+++ b/src/components/DayOfWeek/DayOfWeek.css
@@ -24,4 +24,8 @@
     width: 100%;
     height: 0.9rem;
     border-bottom: 0.06rem solid black;
+    font-family: BadScript;
+    color: rgb(3, 3, 255);
+    font-size: 0.6rem;
+    font-weight: 900;
 }
