--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,3 +10,15 @@ body, html {
 .App-calendar {
     width: 45.15rem;
 }
+
+.blueColor {
+    color: blue;
+}
+
+.redColor {
+    color: red;
+}
+
+.greenColor {
+    color: green;
+}
