--- a/src/components/Day/Day.css
+++ b/src/components/Day/Day.css
@@ -6,16 +6,11 @@
 }
 
 .day:hover {
-    background-color: #929292;
+    background-color: #e9e9e9;
 }
 
 .last, .next {
     background-color: #d1d1d1;
-}
-
-.changed {
-    background-color: #565555;
-    color: white;
 }
 
 .today {
