--- a/src/components/Hour/Hour.css
+++ b/src/components/Hour/Hour.css
@@ -1,12 +1,13 @@
 .Hour {
     display: flex;
-    width: 15.5rem;
+    width: 15rem;
     gap: 1.8rem;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .Hour:hover {
-    background-color: #929292;
+    background-color: #e9e9e9;
 }
 
 .Hour-content {
@@ -18,9 +19,12 @@
     height: 1.3rem;
     border-bottom: 1px solid black;
     font-family: BadScript;
-    /* color: rgb(3, 3, 255); */
     font-size: 0.9rem;
     font-weight: 900;
     display: flex;
-    align-items: center
+    align-items: center;
+}
+
+.Hour-task:hover {
+    background-color: #929292;
 }
