--- a/src/components/DayOfWeek/DayOfWeek.css
+++ b/src/components/DayOfWeek/DayOfWeek.css
@@ -21,9 +21,14 @@
 }
 
 .Week-day-check {
-    width: 0.7rem;
-    height: 0.7rem;
+    width: 0.9rem;
+    height: 0.9rem;
     border: 0.06rem solid black;
+}
+
+.Week-day-check img {
+    width: 100%;
+    height: 100%;
 }
 
 .Week-day-data {
@@ -34,3 +39,4 @@
     font-size: 0.7rem;
     font-weight: 900;
 }
+
