--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -1,11 +1,11 @@
 .task {
-    width: 300px;
+    width: 22rem;
     display: flex;
     align-items: center;
     gap: 0.3rem;
 }
 
-.task input {
+.task-input {
     font-size: 0.8rem;
 }
 
@@ -19,4 +19,8 @@
 .task-trash img {
     width: 100%;
     height: 100%;
+}
+
+.task-check {
+    width: 1rem;
 }
