--- a/src/components/Month/Month.css
+++ b/src/components/Month/Month.css
@@ -1,7 +1,7 @@
 .Month {
-    width: 18rem;
+    width: max-content;
 }
-.month-calendar {
+.Month-calendar {
     display: grid;
     grid-template-columns: repeat(7, 2.5rem);
     grid-template-rows: repeat(6, 2.5rem);
@@ -53,4 +53,32 @@
 .Month-btns>.btn img {
     width: 100%;
     height: 100%;
+}
+
+.Month-wrapper {
+    display: grid;
+    grid-template-columns: 2rem 17.5rem;
+    grid-template-rows: 2rem auto;
+}
+
+.Month-weeks {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Month-weeks>b {
+    height: 2.5rem;
+}
+
+.Month-days {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.Month-calendar {
+    grid-column: 2/3;
+    grid-row: 2/3;
 }
