--- a/src/components/Month/Month.css
+++ b/src/components/Month/Month.css
@@ -34,6 +34,11 @@
     justify-content: space-around;
 }
 
+.Month-header>b {
+    width: 3rem;
+    text-align: center;
+}
+
 .Month-btns {
     width: 4rem;
     display: flex;
