--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -3,6 +3,11 @@
     display: flex;
     align-items: center;
     gap: 0.3rem;
+    cursor: pointer;
+}
+
+.task:hover {
+    background-color: #e9e9e9;
 }
 
 .task-input {
