--- a/src/components/Week/Week.css
+++ b/src/components/Week/Week.css
@@ -1,9 +1,10 @@
 .Week {
-    width: 25rem;
+    width: 20rem;
 }
 
 .Week-calendar {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     gap: 0.6rem;
 }
