--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,8 @@ body, html {
 
 .App {
     display: flex;
-    
+    justify-content: space-around;
+    padding-top: 1rem;
 }
 
 .App-calendar {
@@ -30,4 +31,8 @@ body, html {
 .btn {
     border: none;
     background-color: transparent;
+}
+
+h3 {
+    margin-bottom: 1rem;
 }
