--- a/src/components/Month/Month.css
+++ b/src/components/Month/Month.css
@@ -22,6 +22,10 @@
     gap: 0.6rem;
 }
 
+.Month-title h3{
+    margin-top: 0.5rem;
+}
+
 .Month-title input {
     width: 6.8rem;
     height: auto;
@@ -32,7 +36,6 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
-    margin-bottom: 1rem;
 }
 
 .Month-header>b {
@@ -87,4 +90,25 @@
 .Month-calendar {
     grid-column: 2/3;
     grid-row: 2/3;
+}
+
+.info {
+    margin-top: 5rem;
+}
+
+.info-item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.info-item div:first-child {
+    width: 2rem;
+    height: 2rem;
+}
+
+.info-item div:first-child img {
+    width: 100%;
+    height: 100%;
 }
