--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -36,6 +36,10 @@ body, html {
     background-color: #dedede;
 }
 
+.dark-changed {
+    background-color: #b8b8b8;
+}
+
 .btn {
     border: none;
     background-color: transparent;
