--- a/src/components/Hour/Hour.css
+++ b/src/components/Hour/Hour.css
@@ -1,4 +1,4 @@
-.Hour {
+.hour {
     display: flex;
     width: 15rem;
     gap: 1rem;
@@ -6,15 +6,15 @@
     overflow: hidden;
 }
 
-.Hour:hover {
+.hour:hover {
     background-color: #e9e9e9;
 }
 
-.Hour-content {
+.hour-content {
     width: 100%;
 }
 
-.Hour-task {
+.hour-task {
     width: 100%;
     height: 1.3rem;
     border-bottom: 1px solid black;
@@ -25,6 +25,13 @@
     align-items: center;
 }
 
-.Hour-task:hover {
+.hour-task:hover {
     background-color: #b8b8b8;
+}
+
+.hour-time {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 1rem;
 }
